[AY] feat(learning-resources): simplify resource types for multifile support
