# src/learning-resources/dto.go
@@ -12,7 +12,7 @@ type CreateDTO struct {
 	UploadedUserID   string   `form:"uploaded_user_id" json:"uploaded_user_id" binding:"required,uuid"`
 	Title            string   `form:"title" json:"title" binding:"required"`
 	Description      string   `form:"description" json:"description" binding:"omitempty"`
-	Type             string   `form:"type" json:"type" binding:"omitempty,oneof=file video link interactive-media"`
+	Type             string   `form:"type" json:"type" binding:"omitempty,oneof=media interactive-media"`
 	Files            []string `form:"files" json:"files" binding:"omitempty"`
 }
 
@@ -21,6 +21,6 @@ type UpdateDTO struct {
 	UploadedUserID   *string   `form:"uploaded_user_id" json:"uploaded_user_id" binding:"omitempty,uuid"`
 	Title            *string   `form:"title" json:"title" binding:"omitempty"`
 	Description      *string   `form:"description" json:"description" binding:"omitempty"`
-	Type             *string   `form:"type" json:"type" binding:"omitempty,oneof=file video link interactive-media"`
+	Type             *string   `form:"type" json:"type" binding:"omitempty,oneof=media interactive-media"`
 	Files            *[]string `form:"files" json:"files" binding:"omitempty"`
 }
